# NSU.c

lab0/: CMakeLists.txt
lab0/src/: change_base.c  change_base.h  input.c  input.h  main.c  util.h
lab0/test/: testlab0
lab1-0/: CMakeLists.txt
lab1-0/src/: input.c  input.h  main.c
lab1-0/test/: testlab1-0
lab1-1/: CMakeLists.txt
lab1-1/src/: input.c  input.h  main.c
lab1-1/test/: testlab1-1
lab2/: CMakeLists.txt
lab2/src/: input.c  input.h  main.c
lab2/test/: testlab2
lab3-0/: CMakeLists.txt
lab3-0/src/: input.c  input.h  main.c  sort.c  sort.h
lab3-0/test/: testlab3-0
lab3-1/: CMakeLists.txt
lab3-1/src/: input.c  input.h  main.c  sort.c  sort.h
lab3-1/test/: testlab3-1
lab4/: CMakeLists.txt
lab4/src/: expression_correctness.c  expression_correctness.h  input.h  main.c  postfix_notation.c  postfix_notation.h  structures.c  structures.h
lab4/test/: testlab4
lab5/: CMakeLists.txt
lab5/src/: CMakeLists.txt  archiver.c  archiver.h  copy_file_data.c  copy_file_data.h  debugging.c  debugging.h  decompressor.c  decompressor.h  free_tree.c  free_tree.h  get_test_data.c  get_test_data.h  main.c  structures.c  structures.h  util.c  util.h
lab5/test/: testlab5
lab6/: CMakeLists.txt
lab6/src/: input.c  input.h  main.c
lab6/test/: testlab6
lab7/: CMakeLists.txt
lab7/src/: input.c  input.h  main.c
lab7/test/: testlab7
lab8-0/: CMakeLists.txt
lab8-0/src/: build_frame.c  build_frame.h  input.c  input.h  main.c  structures.c  structures.h
lab8-0/test/: testlab8-0
lab8-1/: CMakeLists.txt
lab9/: CMakeLists.txt
(+18 files in other folders)
